# gcviz

./: Cargo.toml  LICENSE  README.md  program_1682543753.json
.github/workflows/: rust.yml
frontend/: package-lock.json  package.json  utils.ts
frontend/public/: index.html
frontend/src/: App.css  App.tsx  ControlPanel.css  ControlPanel.tsx  EventStream.css  EventStream.tsx  Header.css  Header.tsx  HeapGrid.css  HeapGrid.tsx  Home.tsx  InfoBlock.css  InfoBlock.tsx  Slider.css  Slider.tsx  Toast.css  Toast.tsx  Visualization.css  Visualization.tsx  eventlog.tsx  index.css  index.tsx  logEntry.tsx  logUtils.tsx  types.tsx  useHeapAnimation.tsx  useHightlightState.tsx
src/: allocator.rs  app.rs  ast.rs  error.rs  file_utils.rs  frame.rs  free_list.rs  handler.rs  heap.rs  instr.rs  lib.rs  log.rs  main.rs  mem.rs  mutator.rs  object.rs  program.rs  rts_cfg.rs  session.rs  simulator.rs  types.rs  ui.rs  vm.rs  wsmsg.rs
tests/: alignment_alloc_fail.yaml  alloc_1.yaml  alloc_1_snapshot.yaml  alloc_2.yaml  alloc_2_snapshot.yaml  alloc_3.yaml  alloc_3_snapshot.yaml  could_not_allocate.yaml  integration.rs  mark_compact_lisp2_1_snapshot.yaml  mark_compact_lisp2_2.yaml  mark_compact_two_fingers_1.yaml  mark_compact_two_fingers_1_snapshot.yaml  mark_compact_two_fingers_2.yaml  mark_compact_two_fingers_2_snapshot.yaml  mark_sweep_1.yaml  mark_sweep_1_snapshot.yaml  mark_sweep_2.yaml  mark_sweep_2_snapshot.yaml  mark_sweep_3.yaml  mark_sweep_3_snapshot.yaml  mark_sweep_4.yaml  mark_sweep_4_snapshot.yaml  simple.json  simple.yaml  simple_snapshot.json  simple_snapshot.yaml
(+17 files in other folders)
