[package]
name = "gcviz"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.26"
env_logger = "0.10.0"
futures-util = "0.3.28"
log = "0.4.20"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.21"
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = "0.20.0"
tungstenite = "0.20.0"
warp = "0.3.5"

[dev-dependencies]
gcviz = {path = "."}
pretty_assertions = "1.3.0"
lazy_static = "1.4.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
